--- a/my website/index.html
+++ b/my website/index.html
@@ -46,7 +46,7 @@
   <div class="flex flex-col-reverse lg:flex-row justify-center items-center py-10 gap-8">
     <div class="flex flex-col items-center justify-center gap-6">
       <h3 class="text-2xl lg:text-3xl font-medium uppercase">Sportsters</h3>
-      <h1 class="text-4xl md:text-6xl font-extrabold font-serif tracking-wider leading-tight md:leading-[90px] max-w-2xl text-center lg:text-left mb-5">Sports seasonal discount is coming to an end . Shop while you can to get <span class="text-[#275ae5]">20% off</span></h1>
+      <h1 class="text-4xl md:text-6xl font-extrabold font-serif tracking-wider leading-tight md:leading-[90px] max-w-2xl text-center lg:text-left mb-5">Sports seasonal discount is coming to an end . Shop more than 3000tk to get <span class="text-[#275ae5]">20% off</span></h1>
       <p class="text-lg font-medium hover:cursor-pointer">Use Promo Code <span class="px-5 py-3 bg-[#275ae5] text-white rounded-lg ml-5" id="discount-coupon">DISCOUNT20</span></p>
     </div>
     <div>
@@ -77,7 +77,7 @@
               </div>
               <h2 class="card-title">True-Born football</h2>
               <p class="text-gray-400 text-lg"><span>390.00</span> TK</p>
-              <button onclick="addItem('Bead Necklace', 390.00)" class="bg-red-500 text-white px-3 py-2.5 text-lg hover:bg-red-600 rounded font-semibold">Buy Now</button>
+              <button onclick="addItem('True-Born football', 390.00)" class="bg-blue-500 text-white px-3 py-2.5 text-lg hover:bg-blue-600 rounded font-semibold">Buy Now</button>
             </div>
           </div>
           <!-- necklace Card 2 -->
@@ -95,7 +95,7 @@
                </div>
                <h2 class="card-title" >Rhino soccer ball</h2>
                <p class="text-gray-400 text-lg"><span>890.00</span> TK</p>
-               <button  onclick="addItem('Homemade Necklace', 890.00)" class="bg-red-500 text-white px-3 py-2.5 text-lg hover:bg-red-600 rounded font-semibold">Buy Now</button>
+               <button  onclick="addItem('Rhino soccer ball', 890.00)" class="bg-blue-500 text-white px-3 py-2.5 text-lg hover:bg-blue-600 rounded font-semibold">Buy Now</button>
              </div>
            </div>
            <!-- Necklace Card 3 -->
@@ -113,7 +113,7 @@
                </div>
                <h2 class="card-title">jumbo-plane tennis ball</h2>
                <p class="text-gray-400 text-lg"><span>60.00</span> TK</p>
-               <button onclick="addItem('Gold Necklace', 6000.00)" class="bg-red-500 text-white px-3 py-2.5 text-lg hover:bg-red-600 rounded font-semibold">Buy Now</button>
+               <button onclick="addItem('jumbo-plane tennis ball', 60.00)" class="bg-blue-500 text-white px-3 py-2.5 text-lg hover:bg-blue-600 rounded font-semibold">Buy Now</button>
              </div>
            </div>
         </div>
@@ -137,7 +137,7 @@
               </div>
               <h2 class="card-title">table tennnis bat and ball</h2>
               <p class="text-gray-400 text-lg"><span>490.00</span> TK</p>
-              <button onclick="addItem('Long Earrings', 490.00)" class="bg-red-500 text-white px-3 py-2.5 text-lg hover:bg-red-600 rounded font-semibold">Buy Now</button>
+              <button onclick="addItem('table tennis bat and ball', 490.00)" class="bg-blue-500 text-white px-3 py-2.5 text-lg hover:bg-blue-600 rounded font-semibold">Buy Now</button>
             </div>
           </div>
           <!--  Earrings Card 2 -->
@@ -153,9 +153,9 @@
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#FFC107]" checked />
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#FFC107]" />
                 </div>
-                <h2 class="card-title" ></h2>
+                <h2 class="card-title" >bowling ball</h2>
                 <p class="text-gray-400 text-lg"><span>1200.00</span> TK</p>
-                <button onclick="addItem('Cute Earrings', 1200.00)" class="bg-red-500 text-white px-3 py-2.5 text-lg hover:bg-red-600 rounded font-semibold">Buy Now</button>
+                <button onclick="addItem('bowling ball', 1200.00)" class="bg-blue-500 text-white px-3 py-2.5 text-lg hover:bg-blue-600 rounded font-semibold">Buy Now</button>
               </div>
             </div>
             <!--  Earrings Card 3 -->
@@ -171,9 +171,9 @@
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#FFC107]" />
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#FFC107]" />
                 </div>
-                <h2 class="card-title" >Food Earrings</h2>
-                <p class="text-gray-400 text-lg"><span>2000.00</span> TK</p>
-                <button onclick="addItem('Food Earrings', 2000.00)" class="bg-red-500 text-white px-3 py-2.5 text-lg hover:bg-red-600 rounded font-semibold">Buy Now</button>
+                <h2 class="card-title" >golf ball</h2>
+                <p class="text-gray-400 text-lg"><span>200.00</span> TK</p>
+                <button onclick="addItem('golf ball', 200.00)" class="bg-blue-500 text-white px-3 py-2.5 text-lg hover:bg-blue-600 rounded font-semibold">Buy Now</button>
               </div>
             </div>
         </div>
@@ -185,7 +185,7 @@
           <!-- Clip Card 1 -->
           <div class="card w-80 bg-base-100 shadow-xl flex flex-col items-center p-6" >
             <div class="w-full h-52 bg-[#1111110D] rounded-lg flex flex-col items-center justify-center p-8"> 
-            <img src="clip.jpg" alt=""/>
+            <img src="equip4.jpg" alt=""/>
           </div>
             <div class="card-body flex flex-col items-center gap-4">
               <div class="rating">
@@ -195,15 +195,15 @@
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#FFC107]" checked />
                 <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#FFC107]" />
               </div>
-              <h2 class="card-title">Kids Clip</h2>
-              <p class="text-gray-400 text-lg"><span>185.00</span> TK</p>
-              <button onclick="addItem('Kids Clip', 185.00)" class="bg-red-500 text-white px-3 py-2.5 text-lg hover:bg-red-600 rounded font-semibold">Buy Now</button>
+              <h2 class="card-title">football</h2>
+              <p class="text-gray-400 text-lg"><span>500.00</span> TK</p>
+              <button onclick="addItem('football', 500.00)" class="bg-blue-500 text-white px-3 py-2.5 text-lg hover:bg-blue-600 rounded font-semibold">Buy Now</button>
             </div>
           </div>
           <!-- Clip Card 2 -->
           <div class="card w-80 bg-base-100 shadow-xl flex flex-col items-center p-6">
             <div class="w-full h-52 bg-[#1111110D] rounded-lg flex flex-col items-center justify-center p-8"> 
-              <img src="crystal.jpg" alt=""/>
+              <img src="equip5.jpg" alt=""/>
             </div>
               <div class="card-body flex flex-col items-center gap-4">
                 <div class="rating">
@@ -213,15 +213,15 @@
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#FFC107]" />
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#FFC107]" checked />
                 </div>
-                <h2 class="card-title">Crystal Clip</h2>
-                <p class="text-gray-400 text-lg"><span>299.00</span> TK</p>
-                <button onclick="addItem('Crystal Clip', 290.00)" class="bg-red-500 text-white px-3 py-2.5 text-lg hover:bg-red-600 rounded font-semibold">Buy Now</button>
+                <h2 class="card-title">boxing glove</h2>
+                <p class="text-gray-400 text-lg"><span>700.00</span> TK</p>
+                <button onclick="addItem('boxing glove', 700.00)" class="bg-blue-500 text-white px-3 py-2.5 text-lg hover:bg-blue-600 rounded font-semibold">Buy Now</button>
               </div>
             </div>
             <!-- Clip Card 3 -->
             <div class="card w-80 bg-base-100 shadow-xl flex flex-col items-center p-6">
             <div class="w-full h-52 bg-[#1111110D] rounded-lg flex flex-col items-center justify-center p-8"> 
-              <img src="pearl.jpg" alt=""/>
+              <img src="equip6.jpg" alt=""/>
             </div>
               <div class="card-body flex flex-col items-center gap-4">
                 <div class="rating">
@@ -231,16 +231,59 @@
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#FFC107]" />
                   <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#FFC107]" checked />
                 </div>
-                <h2 class="card-title">Pearl Clip</h2>
-                <p class="text-gray-400 text-lg"><span>339.00</span> TK</p>
-                <button onclick="addItem('Pearl Clip', 339.00)" class="bg-red-500 text-white px-3 py-2.5 text-lg hover:bg-red-600 rounded font-semibold">Buy Now</button>
+                <h2 class="card-title">shuttlecock</h2>
+                <p class="text-gray-400 text-lg"><span>80.00</span> TK</p>
+                <button onclick="addItem('shuttlecock', 80.00)" class="bg-blue-500 text-white px-3 py-2.5 text-lg hover:bg-blue-600 rounded font-semibold">Buy Now</button>
               </div>
             </div>
+            
         </div>
-      </div>                
+      </div> 
+                     
     </div>
-
-  
+    <div>
+      <!-- Coupon -->
+      <div class="p-6 bg-white rounded-lg border border-gray-100 shadow-md mt-20 mb-6">
+        <h3 class="font-medium text-lg mb-4">Have coupon?</h3>
+        <div class="relative">
+          <input type="text" placeholder="Coupon code" class="input input-bordered w-full pr-12" id="coupon-code" /> 
+          <button class="btn btn-primary absolute top-0 right-0 rounded-l-none border-[#275ae5] bg-[#275ae5] hover:bg-[#275ae5] hover:border-[#275ae5] text-white text-lg" id="coupon-button">Apply</button>
+        </div>
+      </div>
+      <!-- Cart Item -->
+      <div class="px-6 py-8 bg-white rounded-lg border border-gray-100 shadow-md mt-6 flex flex-col gap-8">
+          <div class="font-medium text-lg flex flex-col gap-4">
+            <div class="grid gap-2" id="cart-item">     
+            </div>
+            <hr class="border-1 border-[#1212] w-full" />
+            <div class="grid gap-3">
+              <p>Total Price: <span class="text-gray-400" id="total-price">00.00</span><span class="text-gray-400"> TK</span></p>
+              <p>Discount: <span class="text-gray-400" id="total-discount">00.00</span><span class="text-gray-400"> TK</span></p>
+              <p>Final Price: <span class="text-gray-400" id="price-after-discount">00.00</span><span class="text-gray-400"> TK</span></p>
+            </div>
+            <hr class="border-1 border-[#1212] w-full" />
+          </div>
+          <button class="btn btn-primary border-[#275ae5] bg-[#275ae5] hover:bg-[#275ae5] hover:border-[#275ae5] text-white w-full text-lg" onclick="my_modal_1.showModal()" id="purchase-button">Make Purchase</button>
+          <dialog id="my_modal_1" class="modal">
+            <form method="dialog" class="modal-box">
+              <div>
+                <a class="mx-3 my-5 flex justify-center h-50 overflow-hidden rounded-xl" href="#">
+                  <img class="object-cover" src="success.png" alt="" />
+                </a>
+                <div class="mt-4 px-5 pb-5 flex flex-col items-center justify-between gap-6">
+                  <div class="mt-5">
+                    <h3 class="font-bold text-4xl">Congratulations</h3>
+                  </div>
+                  <p>You purchase the product</p>
+                  <div class="modal-action">
+                    <button class="btn btn-primary border-[#275ae5] bg-[#275ae5] hover:bg-[#275ae5] hover:border-[#275ae5] text-white" id="back-home">Go Home</button>
+                  </div>
+              </div>
+            </form>
+          </dialog>
+        </div>
+      </div>
+    </div>
 <script src="script.js"></script>    
 </body>
 </html>
